      about which PCRE's news says
      \sQuote{large performance benefits can be had in many situations}.
      (It is supported on most but not all CPUs that run R.)

      \item \code{legend()} gains a \code{text.font} argument. (Suggested
      by Tim Paine, \PR{14719}.)

      \item \code{nchar()} and \code{nzchar()} no longer accept factors
      (as integer vectors).  (Wish of \PR{6899}.)
    }
  }

  \subsection{PACKAGE parallel}{
    \itemize{
      \item There is a new function \code{mcmapply()}, a parallel version
      of \code{mapply()}, and a wrapper \code{mcMap()}, a parallel
      version of \code{Map()}.

      \item A default cluster can be registered by the new function
      \code{setDefaultCluster()}: this will be used by default in
      functions such as \code{parLapply()}.

      \item \code{clusterMap()} has a new argument \code{.scheduling} to
      allow the use of load-balancing.

      \item There are new load-balancing function \code{parLapplyLB()}
      and \code{parSapplyLB()}.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item Non-ASCII vignettes without a declared encoding are no
      longer accepted.

      \item \command{R CMD INSTALL} will now do a test load for all
      sub-architectures for which code was compiled (rather than just
      the primary sub-architecture).

      \item Code in packages is now compiled with \code{-NDEBUG} to
      mitigate against \code{assert} being called in production use.
      Developers can turn this off during package development with
      \code{PKG_CPPFLAGS = -UNDEBUG}.
      
      \item \command{R CMD INSTALL} has a new option \option{--dsym}
      which on Mac OS X (Darwin) dumps the symbols alongside the
      \file{.so} file: this is helpful when debugging with
      \command{valgrind} (and especially when installing packages into
      \file{R.framework}).  [This can also be enabled by setting the