@@ -117,8 +117,13 @@ print.Date <- function(x, ...)
 
 summary.Date <- function(object, digits = 12, ...)
 {
-    x <- summary.default(unclass(object), digits = digits, ...)[1L:6L]# not NA's
-    class(x) <- oldClass(object)
+    x <- summary.default(unclass(object), digits = digits, ...)
+    if(m <- match("NA's", names(x), 0)) {
+        NAs <- as.integer(x[m])
+        x <- x[-m]
+        attr(x, "NAs") <- NAs
+    }
+    class(x) <- c("summaryDefault", "table", oldClass(object))
     x
 }
 
